# Vector-Based-Conflict-Alert-System-Testbed

./: .env.example  .gitignore  BUILD_STATE.md  README.md  THIRD_PARTY.md  docker-compose.vps.yml  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
config/: risk_weights.yaml  wind.yaml
dashboard/: app.py
docker/: dashboard.Dockerfile
docs/: index.md
docs/adr/: ADR-000-template.md  ADR-001-coordinate-frame-encision.md  ADR-004-risk-model-and-fallback.md
docs/wiki/: vcas_knowledge_bank.md
infra/terraform/: main.tf  outputs.tf
infra/terraform/cloud-init/: install-vcas.sh
monitoring/grafana/dashboards/: vcas-ml.json  vcas-threads.json  vcas-websocket.json
monitoring/uptimerobot/: README.md  monitors.template.json
portfolio/vps/: projects.json
portfolio/vps/vcas/: .env.example  .pre-commit-config.yaml  LICENSE  (+5 more)
scenarios/bluesky/: azo_arrivals_hold_then_approach.yml  azo_flow_22.yml  terminal_departure_grid_9.yml
scenarios/canonical/: complex_traffic.yml  dense_8.yml  divergent.yml  parallel.yml
scenarios/performance/: 200_aircraft_30m.yml
scripts/: add_headers.py  benchmark_load.py  fetch_opensky_cache.py  generate_azo_flow_22.py  generate_complex_scenario.py  locustfile.py  nightly_replay_check.py  run_demo.py  smoke_demo.py  start_vcas_radar.bat  start_vcas_radar.ps1
src/vcas/: __init__.py
tests/: test_api.py  test_benchmark.py  test_coords.py  test_engine.py  test_flight_plan.py  test_grid.py  test_ml_client.py  test_physics_core.py  test_simulator.py  test_surveillance.py
web/: public_demo.html  public_demo.js  radar.html
(+119 files in other folders)
