[tool.uv]
index-strategy = "unsafe-best-match"

[project]
name = "vcas-testbed"
version = "0.1.0"
description = "Vector-based Conflict Alert System (vCAS) testbed"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "PolyForm Noncommercial 1.0.0 (author-restricted)"}
authors = [{name = "Sri Surya Sameer Vaddhiparthy"}]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "numpy>=2.0.0",
    "pydantic>=2.8.0",
    "sqlalchemy>=2.0.0",
    "psycopg>=3.2.0",
    "redis>=5.0.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "pyyaml>=6.0.2",
    "streamlit>=1.39.0",
    "pyopensky>=2.13.0",
]
optional-dependencies.dev = [
    "ruff>=0.6.0",
    "pytest>=8.2.0",
    "hypothesis>=6.108.0",
    "pre-commit>=3.8.0",
    "sqlfluff>=3.0.0",
    "httpx>=0.28.0",
    "locust>=2.32.0",
    "dbt-core>=1.8.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.2.0",
    "hypothesis>=6.108.0",
    "pre-commit>=3.8.0",
    "sqlfluff>=3.0.0",
    "httpx>=0.28.0",
    "locust>=2.32.0",
    "dbt-core>=1.8.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
vcas-add-headers = "vcas.tools.add_headers:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vcas"]
